# card-games

./: CMakeLists.txt  README.md
include/: war.hpp
src/: main.cpp  war.hpp
test/: card_tests.cpp  deck_tests.cpp  main_test.cpp
